<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#D6E3E9"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/queryresponse"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/customerTv"
                />

            <!-- queryid -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/queryid">

                <AutoCompleteTextView
                    android:id="@+id/query_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/srno">

                <AutoCompleteTextView
                    android:id="@+id/sr_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ageniId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/agent_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/response_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/responsedate">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/response_date"
                    android:drawableEnd="@drawable/date_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Buttons -->
            <Button

                android:layout_marginTop="6dp"
                android:id="@+id/response_btn_get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gets" />
            <Button
                android:id="@+id/response_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Post" />

            <Button

                android:id="@+id/esponse_btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updates" />

            <Button

                android:id="@+id/esponse_btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deletes" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
