<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#D6E3E9"
  >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customequery"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="24sp"
                android:id="@+id/customerTv"
                />

            <!-- customerid -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/queryid">

                <AutoCompleteTextView
                    android:id="@+id/customerqueryquery_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/customer_ID">

                <AutoCompleteTextView
                    android:id="@+id/customerQuerycustomer_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cusQueryDesc_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/query_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cus_query_Date"
                    android:drawableEnd="@drawable/date_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/status">
                <AutoCompleteTextView
                    android:id="@+id/cus_query_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Buttons -->
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/customerquery_btn_get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gets" />
            <Button
                android:id="@+id/customerquery_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Post" />

            <Button
                android:id="@+id/customerquery_btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updates" />

            <Button
                android:id="@+id/customerquery_btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deletes" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
